// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/navbar/Navbar should match snapshot, for private channel 1`] = `
<div>
  <nav
    className="navbar navbar-default navbar-fixed-top"
    role="navigation"
  >
    <div
      className="container-fluid theme"
    >
      <div
        className="navbar-header"
      >
        <button
          className="navbar-toggle"
          data-target="#sidebar-nav"
          data-toggle="collapse"
          key="navbar-toggle-sidebar"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            <FormattedMessage
              defaultMessage="Toggle sidebar"
              id="navbar.toggle2"
              values={Object {}}
            />
          </span>
          <MenuIcon
            className="icon icon__menu icon--sidebarHeaderTextColor"
          />
          <NotifyCounts />
        </button>
        <button
          className="navbar-toggle navbar-right__icon menu-toggle pull-right"
          data-target="#sidebar-nav"
          data-toggle="collapse"
          key="navbar-toggle-menu"
          onClick={[Function]}
          type="button"
        >
          <MenuIcon />
        </button>
        <button
          className="navbar-toggle navbar-right__icon navbar-search pull-right"
          onClick={[Function]}
          type="button"
        >
          <SearchIcon
            aria-hidden="true"
            className="icon icon__search"
          />
        </button>
        <NavbarInfoButton
          channel={
            Object {
              "display_name": "display_name",
              "id": "channel_id",
              "team_id": "team_id",
              "type": "P",
            }
          }
          showEditChannelHeaderModal={[Function]}
        />
        <Connect(Pluggable)
          pluggableName="MobileChannelHeaderButton"
        />
        <div
          className="navbar-brand"
        >
          <div
            className="dropdown"
          >
            <a
              aria-expanded="true"
              className="dropdown-toggle theme"
              data-toggle="dropdown"
              href="#"
              type="button"
            >
              <span
                className="heading"
              >
                <StatusIcon
                  className=""
                  status={null}
                />
                display_name
                 
              </span>
              <span
                className="fa fa-angle-down header-dropdown__icon"
              />
            </a>
            <ul
              className="dropdown-menu"
              role="menu"
            >
              <li
                role="presentation"
              >
                <Connect(ModalToggleButtonRedux)
                  dialogProps={
                    Object {
                      "channel": Object {
                        "display_name": "display_name",
                        "id": "channel_id",
                        "team_id": "team_id",
                        "type": "P",
                      },
                    }
                  }
                  dialogType={[Function]}
                  modalId="channel_info"
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Info"
                    id="navbar.viewInfo"
                    values={Object {}}
                  />
                </Connect(ModalToggleButtonRedux)>
              </li>
              <li
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Pinned Posts"
                    id="navbar.viewPinnedPosts"
                    values={Object {}}
                  />
                </a>
              </li>
              <li
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Notification Preferences"
                    id="navbar.preferences"
                    values={Object {}}
                  />
                </a>
              </li>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                key="add_members_permission"
                permissions={
                  Array [
                    "manage_private_channel_members",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <ModalToggleButton
                    className=""
                    dialogProps={
                      Object {
                        "channel": Object {
                          "display_name": "display_name",
                          "id": "channel_id",
                          "team_id": "team_id",
                          "type": "P",
                        },
                        "currentUser": Object {
                          "id": "current_user_id",
                        },
                      }
                    }
                    dialogType={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Add Members"
                      id="navbar.addMembers"
                      values={Object {}}
                    />
                  </ModalToggleButton>
                </li>
              </Connect(ChannelPermissionGate)>
              <li
                key="manage_members"
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <Connect(ChannelPermissionGate)
                    channelId="channel_id"
                    permissions={
                      Array [
                        "manage_private_channel_members",
                      ]
                    }
                    teamId="team_id"
                  >
                    <FormattedMessage
                      defaultMessage="Manage Members"
                      id="channel_header.manageMembers"
                      values={Object {}}
                    />
                  </Connect(ChannelPermissionGate)>
                  <Connect(ChannelPermissionGate)
                    channelId="channel_id"
                    invert={true}
                    permissions={
                      Array [
                        "manage_private_channel_members",
                      ]
                    }
                    teamId="team_id"
                  >
                    <FormattedMessage
                      defaultMessage="View Members"
                      id="channel_header.viewMembers"
                      values={Object {}}
                    />
                  </Connect(ChannelPermissionGate)>
                </a>
              </li>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "manage_private_channel_properties",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Edit Channel Header"
                      id="channel_header.setHeader"
                      values={Object {}}
                    />
                  </a>
                </li>
              </Connect(ChannelPermissionGate)>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "manage_private_channel_properties",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Edit Channel Purpose"
                      id="channel_header.setPurpose"
                      values={Object {}}
                    />
                  </a>
                </li>
              </Connect(ChannelPermissionGate)>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "manage_private_channel_properties",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Rename Channel"
                      id="channel_header.rename"
                      values={Object {}}
                    />
                  </a>
                </li>
              </Connect(ChannelPermissionGate)>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "delete_private_channel",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <ModalToggleButton
                    className=""
                    dialogProps={
                      Object {
                        "channel": Object {
                          "display_name": "display_name",
                          "id": "channel_id",
                          "team_id": "team_id",
                          "type": "P",
                        },
                      }
                    }
                    dialogType={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Delete Channel"
                      id="channel_header.delete"
                      values={Object {}}
                    />
                  </ModalToggleButton>
                </li>
              </Connect(ChannelPermissionGate)>
              <li
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Leave Channel"
                    id="channel_header.leave"
                    values={Object {}}
                  />
                </a>
              </li>
              <li
                key="toggle_favorite"
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Add to Favorites"
                    id="channelHeader.addToFavorites"
                    values={Object {}}
                  />
                </a>
              </li>
              <div
                className="close visible-xs-block"
                onClick={[Function]}
              >
                ×
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </nav>
  <Connect(InjectIntl(RenameChannelModal))
    channel={
      Object {
        "display_name": "display_name",
        "id": "channel_id",
        "team_id": "team_id",
        "type": "P",
      }
    }
    onHide={[Function]}
    show={false}
  />
  <Connect(ChannelNotificationsModal)
    channel={
      Object {
        "display_name": "display_name",
        "id": "channel_id",
        "team_id": "team_id",
        "type": "P",
      }
    }
    channelMember={
      Object {
        "id": "member_id",
      }
    }
    currentUser={
      Object {
        "id": "current_user_id",
      }
    }
    onHide={[Function]}
    show={false}
  />
  <Connect(QuickSwitchModal)
    initialMode="channel"
    onHide={[Function]}
    show={false}
  />
</div>
`;

exports[`components/navbar/Navbar should match snapshot, if WebRTC is not enabled 1`] = `
<div>
  <nav
    className="navbar navbar-default navbar-fixed-top"
    role="navigation"
  >
    <div
      className="container-fluid theme"
    >
      <div
        className="navbar-header"
      >
        <button
          className="navbar-toggle"
          data-target="#sidebar-nav"
          data-toggle="collapse"
          key="navbar-toggle-sidebar"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            <FormattedMessage
              defaultMessage="Toggle sidebar"
              id="navbar.toggle2"
              values={Object {}}
            />
          </span>
          <MenuIcon
            className="icon icon__menu icon--sidebarHeaderTextColor"
          />
          <NotifyCounts />
        </button>
        <button
          className="navbar-toggle navbar-right__icon menu-toggle pull-right"
          data-target="#sidebar-nav"
          data-toggle="collapse"
          key="navbar-toggle-menu"
          onClick={[Function]}
          type="button"
        >
          <MenuIcon />
        </button>
        <button
          className="navbar-toggle navbar-right__icon navbar-search pull-right"
          onClick={[Function]}
          type="button"
        >
          <SearchIcon
            aria-hidden="true"
            className="icon icon__search"
          />
        </button>
        <NavbarInfoButton
          channel={
            Object {
              "display_name": "display_name",
              "id": "channel_id",
              "team_id": "team_id",
              "type": "O",
            }
          }
          showEditChannelHeaderModal={[Function]}
        />
        <Connect(Pluggable)
          pluggableName="MobileChannelHeaderButton"
        />
        <div
          className="navbar-brand"
        >
          <div
            className="dropdown"
          >
            <a
              aria-expanded="true"
              className="dropdown-toggle theme"
              data-toggle="dropdown"
              href="#"
              type="button"
            >
              <span
                className="heading"
              >
                <StatusIcon
                  className=""
                  status={null}
                />
                display_name
                 
              </span>
              <span
                className="fa fa-angle-down header-dropdown__icon"
              />
            </a>
            <ul
              className="dropdown-menu"
              role="menu"
            >
              <li
                role="presentation"
              >
                <Connect(ModalToggleButtonRedux)
                  dialogProps={
                    Object {
                      "channel": Object {
                        "display_name": "display_name",
                        "id": "channel_id",
                        "team_id": "team_id",
                        "type": "O",
                      },
                    }
                  }
                  dialogType={[Function]}
                  modalId="channel_info"
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Info"
                    id="navbar.viewInfo"
                    values={Object {}}
                  />
                </Connect(ModalToggleButtonRedux)>
              </li>
              <li
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Pinned Posts"
                    id="navbar.viewPinnedPosts"
                    values={Object {}}
                  />
                </a>
              </li>
              <li
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Notification Preferences"
                    id="navbar.preferences"
                    values={Object {}}
                  />
                </a>
              </li>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                key="add_members_permission"
                permissions={
                  Array [
                    "manage_public_channel_members",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <ModalToggleButton
                    className=""
                    dialogProps={
                      Object {
                        "channel": Object {
                          "display_name": "display_name",
                          "id": "channel_id",
                          "team_id": "team_id",
                          "type": "O",
                        },
                        "currentUser": Object {
                          "id": "current_user_id",
                        },
                      }
                    }
                    dialogType={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Add Members"
                      id="navbar.addMembers"
                      values={Object {}}
                    />
                  </ModalToggleButton>
                </li>
              </Connect(ChannelPermissionGate)>
              <li
                key="manage_members"
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <Connect(ChannelPermissionGate)
                    channelId="channel_id"
                    permissions={
                      Array [
                        "manage_public_channel_members",
                      ]
                    }
                    teamId="team_id"
                  >
                    <FormattedMessage
                      defaultMessage="Manage Members"
                      id="channel_header.manageMembers"
                      values={Object {}}
                    />
                  </Connect(ChannelPermissionGate)>
                  <Connect(ChannelPermissionGate)
                    channelId="channel_id"
                    invert={true}
                    permissions={
                      Array [
                        "manage_public_channel_members",
                      ]
                    }
                    teamId="team_id"
                  >
                    <FormattedMessage
                      defaultMessage="View Members"
                      id="channel_header.viewMembers"
                      values={Object {}}
                    />
                  </Connect(ChannelPermissionGate)>
                </a>
              </li>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "manage_public_channel_properties",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Edit Channel Header"
                      id="channel_header.setHeader"
                      values={Object {}}
                    />
                  </a>
                </li>
              </Connect(ChannelPermissionGate)>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "manage_public_channel_properties",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Edit Channel Purpose"
                      id="channel_header.setPurpose"
                      values={Object {}}
                    />
                  </a>
                </li>
              </Connect(ChannelPermissionGate)>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "manage_public_channel_properties",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Rename Channel"
                      id="channel_header.rename"
                      values={Object {}}
                    />
                  </a>
                </li>
              </Connect(ChannelPermissionGate)>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "delete_public_channel",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <ModalToggleButton
                    className=""
                    dialogProps={
                      Object {
                        "channel": Object {
                          "display_name": "display_name",
                          "id": "channel_id",
                          "team_id": "team_id",
                          "type": "O",
                        },
                      }
                    }
                    dialogType={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Delete Channel"
                      id="channel_header.delete"
                      values={Object {}}
                    />
                  </ModalToggleButton>
                </li>
              </Connect(ChannelPermissionGate)>
              <li
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Leave Channel"
                    id="channel_header.leave"
                    values={Object {}}
                  />
                </a>
              </li>
              <li
                key="toggle_favorite"
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Add to Favorites"
                    id="channelHeader.addToFavorites"
                    values={Object {}}
                  />
                </a>
              </li>
              <div
                className="close visible-xs-block"
                onClick={[Function]}
              >
                ×
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </nav>
  <Connect(InjectIntl(RenameChannelModal))
    channel={
      Object {
        "display_name": "display_name",
        "id": "channel_id",
        "team_id": "team_id",
        "type": "O",
      }
    }
    onHide={[Function]}
    show={false}
  />
  <Connect(ChannelNotificationsModal)
    channel={
      Object {
        "display_name": "display_name",
        "id": "channel_id",
        "team_id": "team_id",
        "type": "O",
      }
    }
    channelMember={
      Object {
        "id": "member_id",
      }
    }
    currentUser={
      Object {
        "id": "current_user_id",
      }
    }
    onHide={[Function]}
    show={false}
  />
  <Connect(QuickSwitchModal)
    initialMode="channel"
    onHide={[Function]}
    show={false}
  />
</div>
`;

exports[`components/navbar/Navbar should match snapshot, if enabled WebRTC and DM channel 1`] = `
<div>
  <nav
    className="navbar navbar-default navbar-fixed-top"
    role="navigation"
  >
    <div
      className="container-fluid theme"
    >
      <div
        className="navbar-header"
      >
        <button
          className="navbar-toggle"
          data-target="#sidebar-nav"
          data-toggle="collapse"
          key="navbar-toggle-sidebar"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            <FormattedMessage
              defaultMessage="Toggle sidebar"
              id="navbar.toggle2"
              values={Object {}}
            />
          </span>
          <MenuIcon
            className="icon icon__menu icon--sidebarHeaderTextColor"
          />
          <NotifyCounts />
        </button>
        <button
          className="navbar-toggle navbar-right__icon menu-toggle pull-right"
          data-target="#sidebar-nav"
          data-toggle="collapse"
          key="navbar-toggle-menu"
          onClick={[Function]}
          type="button"
        >
          <MenuIcon />
        </button>
        <button
          className="navbar-toggle navbar-right__icon navbar-search pull-right"
          onClick={[Function]}
          type="button"
        >
          <SearchIcon
            aria-hidden="true"
            className="icon icon__search"
          />
        </button>
        <NavbarInfoButton
          channel={
            Object {
              "display_name": "display_name",
              "id": "channel_id",
              "name": "user_id_1__user_id_2",
              "team_id": "team_id",
              "type": "D",
            }
          }
          showEditChannelHeaderModal={[Function]}
        />
        <Connect(Pluggable)
          pluggableName="MobileChannelHeaderButton"
        />
        <div
          className="navbar-brand"
        >
          <div
            className="dropdown"
          >
            <a
              aria-expanded="true"
              className="dropdown-toggle theme"
              data-toggle="dropdown"
              href="#"
              type="button"
            >
              <span
                className="heading"
              >
                <StatusIcon
                  className=""
                  status="offline"
                />
                 
              </span>
              <span
                className="fa fa-angle-down header-dropdown__icon"
              />
            </a>
            <ul
              className="dropdown-menu"
              role="menu"
            >
              <li
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Edit Channel Header"
                    id="channel_header.channelHeader"
                    values={Object {}}
                  />
                </a>
              </li>
              <li
                key="toggle_favorite"
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Add to Favorites"
                    id="channelHeader.addToFavorites"
                    values={Object {}}
                  />
                </a>
              </li>
              <div
                className="close visible-xs-block"
                onClick={[Function]}
              >
                ×
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </nav>
  <Connect(InjectIntl(RenameChannelModal))
    channel={
      Object {
        "display_name": "display_name",
        "id": "channel_id",
        "name": "user_id_1__user_id_2",
        "team_id": "team_id",
        "type": "D",
      }
    }
    onHide={[Function]}
    show={false}
  />
  <Connect(ChannelNotificationsModal)
    channel={
      Object {
        "display_name": "display_name",
        "id": "channel_id",
        "name": "user_id_1__user_id_2",
        "team_id": "team_id",
        "type": "D",
      }
    }
    channelMember={
      Object {
        "id": "member_id",
      }
    }
    currentUser={
      Object {
        "id": "current_user_id",
      }
    }
    onHide={[Function]}
    show={false}
  />
  <Connect(QuickSwitchModal)
    initialMode="channel"
    onHide={[Function]}
    show={false}
  />
</div>
`;

exports[`components/navbar/Navbar should match snapshot, if not licensed 1`] = `
<div>
  <nav
    className="navbar navbar-default navbar-fixed-top"
    role="navigation"
  >
    <div
      className="container-fluid theme"
    >
      <div
        className="navbar-header"
      >
        <button
          className="navbar-toggle"
          data-target="#sidebar-nav"
          data-toggle="collapse"
          key="navbar-toggle-sidebar"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            <FormattedMessage
              defaultMessage="Toggle sidebar"
              id="navbar.toggle2"
              values={Object {}}
            />
          </span>
          <MenuIcon
            className="icon icon__menu icon--sidebarHeaderTextColor"
          />
          <NotifyCounts />
        </button>
        <button
          className="navbar-toggle navbar-right__icon menu-toggle pull-right"
          data-target="#sidebar-nav"
          data-toggle="collapse"
          key="navbar-toggle-menu"
          onClick={[Function]}
          type="button"
        >
          <MenuIcon />
        </button>
        <button
          className="navbar-toggle navbar-right__icon navbar-search pull-right"
          onClick={[Function]}
          type="button"
        >
          <SearchIcon
            aria-hidden="true"
            className="icon icon__search"
          />
        </button>
        <NavbarInfoButton
          channel={
            Object {
              "display_name": "display_name",
              "id": "channel_id",
              "team_id": "team_id",
              "type": "O",
            }
          }
          showEditChannelHeaderModal={[Function]}
        />
        <Connect(Pluggable)
          pluggableName="MobileChannelHeaderButton"
        />
        <div
          className="navbar-brand"
        >
          <div
            className="dropdown"
          >
            <a
              aria-expanded="true"
              className="dropdown-toggle theme"
              data-toggle="dropdown"
              href="#"
              type="button"
            >
              <span
                className="heading"
              >
                <StatusIcon
                  className=""
                  status={null}
                />
                display_name
                 
              </span>
              <span
                className="fa fa-angle-down header-dropdown__icon"
              />
            </a>
            <ul
              className="dropdown-menu"
              role="menu"
            >
              <li
                role="presentation"
              >
                <Connect(ModalToggleButtonRedux)
                  dialogProps={
                    Object {
                      "channel": Object {
                        "display_name": "display_name",
                        "id": "channel_id",
                        "team_id": "team_id",
                        "type": "O",
                      },
                    }
                  }
                  dialogType={[Function]}
                  modalId="channel_info"
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Info"
                    id="navbar.viewInfo"
                    values={Object {}}
                  />
                </Connect(ModalToggleButtonRedux)>
              </li>
              <li
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Pinned Posts"
                    id="navbar.viewPinnedPosts"
                    values={Object {}}
                  />
                </a>
              </li>
              <li
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Notification Preferences"
                    id="navbar.preferences"
                    values={Object {}}
                  />
                </a>
              </li>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                key="add_members_permission"
                permissions={
                  Array [
                    "manage_public_channel_members",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <ModalToggleButton
                    className=""
                    dialogProps={
                      Object {
                        "channel": Object {
                          "display_name": "display_name",
                          "id": "channel_id",
                          "team_id": "team_id",
                          "type": "O",
                        },
                        "currentUser": Object {
                          "id": "current_user_id",
                        },
                      }
                    }
                    dialogType={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Add Members"
                      id="navbar.addMembers"
                      values={Object {}}
                    />
                  </ModalToggleButton>
                </li>
              </Connect(ChannelPermissionGate)>
              <li
                key="manage_members"
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <Connect(ChannelPermissionGate)
                    channelId="channel_id"
                    permissions={
                      Array [
                        "manage_public_channel_members",
                      ]
                    }
                    teamId="team_id"
                  >
                    <FormattedMessage
                      defaultMessage="Manage Members"
                      id="channel_header.manageMembers"
                      values={Object {}}
                    />
                  </Connect(ChannelPermissionGate)>
                  <Connect(ChannelPermissionGate)
                    channelId="channel_id"
                    invert={true}
                    permissions={
                      Array [
                        "manage_public_channel_members",
                      ]
                    }
                    teamId="team_id"
                  >
                    <FormattedMessage
                      defaultMessage="View Members"
                      id="channel_header.viewMembers"
                      values={Object {}}
                    />
                  </Connect(ChannelPermissionGate)>
                </a>
              </li>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "manage_public_channel_properties",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Edit Channel Header"
                      id="channel_header.setHeader"
                      values={Object {}}
                    />
                  </a>
                </li>
              </Connect(ChannelPermissionGate)>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "manage_public_channel_properties",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Edit Channel Purpose"
                      id="channel_header.setPurpose"
                      values={Object {}}
                    />
                  </a>
                </li>
              </Connect(ChannelPermissionGate)>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "manage_public_channel_properties",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Rename Channel"
                      id="channel_header.rename"
                      values={Object {}}
                    />
                  </a>
                </li>
              </Connect(ChannelPermissionGate)>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "delete_public_channel",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <ModalToggleButton
                    className=""
                    dialogProps={
                      Object {
                        "channel": Object {
                          "display_name": "display_name",
                          "id": "channel_id",
                          "team_id": "team_id",
                          "type": "O",
                        },
                      }
                    }
                    dialogType={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Delete Channel"
                      id="channel_header.delete"
                      values={Object {}}
                    />
                  </ModalToggleButton>
                </li>
              </Connect(ChannelPermissionGate)>
              <li
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Leave Channel"
                    id="channel_header.leave"
                    values={Object {}}
                  />
                </a>
              </li>
              <li
                key="toggle_favorite"
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Add to Favorites"
                    id="channelHeader.addToFavorites"
                    values={Object {}}
                  />
                </a>
              </li>
              <div
                className="close visible-xs-block"
                onClick={[Function]}
              >
                ×
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </nav>
  <Connect(InjectIntl(RenameChannelModal))
    channel={
      Object {
        "display_name": "display_name",
        "id": "channel_id",
        "team_id": "team_id",
        "type": "O",
      }
    }
    onHide={[Function]}
    show={false}
  />
  <Connect(ChannelNotificationsModal)
    channel={
      Object {
        "display_name": "display_name",
        "id": "channel_id",
        "team_id": "team_id",
        "type": "O",
      }
    }
    channelMember={
      Object {
        "id": "member_id",
      }
    }
    currentUser={
      Object {
        "id": "current_user_id",
      }
    }
    onHide={[Function]}
    show={false}
  />
  <Connect(QuickSwitchModal)
    initialMode="channel"
    onHide={[Function]}
    show={false}
  />
</div>
`;

exports[`components/navbar/Navbar should match snapshot, invalid state 1`] = `""`;

exports[`components/navbar/Navbar should match snapshot, valid state 1`] = `
<div>
  <nav
    className="navbar navbar-default navbar-fixed-top"
    role="navigation"
  >
    <div
      className="container-fluid theme"
    >
      <div
        className="navbar-header"
      >
        <button
          className="navbar-toggle"
          data-target="#sidebar-nav"
          data-toggle="collapse"
          key="navbar-toggle-sidebar"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            <FormattedMessage
              defaultMessage="Toggle sidebar"
              id="navbar.toggle2"
              values={Object {}}
            />
          </span>
          <MenuIcon
            className="icon icon__menu icon--sidebarHeaderTextColor"
          />
          <NotifyCounts />
        </button>
        <button
          className="navbar-toggle navbar-right__icon menu-toggle pull-right"
          data-target="#sidebar-nav"
          data-toggle="collapse"
          key="navbar-toggle-menu"
          onClick={[Function]}
          type="button"
        >
          <MenuIcon />
        </button>
        <button
          className="navbar-toggle navbar-right__icon navbar-search pull-right"
          onClick={[Function]}
          type="button"
        >
          <SearchIcon
            aria-hidden="true"
            className="icon icon__search"
          />
        </button>
        <NavbarInfoButton
          channel={
            Object {
              "display_name": "display_name",
              "id": "channel_id",
              "team_id": "team_id",
              "type": "O",
            }
          }
          showEditChannelHeaderModal={[Function]}
        />
        <Connect(Pluggable)
          pluggableName="MobileChannelHeaderButton"
        />
        <div
          className="navbar-brand"
        >
          <div
            className="dropdown"
          >
            <a
              aria-expanded="true"
              className="dropdown-toggle theme"
              data-toggle="dropdown"
              href="#"
              type="button"
            >
              <span
                className="heading"
              >
                <StatusIcon
                  className=""
                  status={null}
                />
                display_name
                 
              </span>
              <span
                className="fa fa-angle-down header-dropdown__icon"
              />
            </a>
            <ul
              className="dropdown-menu"
              role="menu"
            >
              <li
                role="presentation"
              >
                <Connect(ModalToggleButtonRedux)
                  dialogProps={
                    Object {
                      "channel": Object {
                        "display_name": "display_name",
                        "id": "channel_id",
                        "team_id": "team_id",
                        "type": "O",
                      },
                    }
                  }
                  dialogType={[Function]}
                  modalId="channel_info"
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Info"
                    id="navbar.viewInfo"
                    values={Object {}}
                  />
                </Connect(ModalToggleButtonRedux)>
              </li>
              <li
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="View Pinned Posts"
                    id="navbar.viewPinnedPosts"
                    values={Object {}}
                  />
                </a>
              </li>
              <li
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Notification Preferences"
                    id="navbar.preferences"
                    values={Object {}}
                  />
                </a>
              </li>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                key="add_members_permission"
                permissions={
                  Array [
                    "manage_public_channel_members",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <ModalToggleButton
                    className=""
                    dialogProps={
                      Object {
                        "channel": Object {
                          "display_name": "display_name",
                          "id": "channel_id",
                          "team_id": "team_id",
                          "type": "O",
                        },
                        "currentUser": Object {
                          "id": "current_user_id",
                        },
                      }
                    }
                    dialogType={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Add Members"
                      id="navbar.addMembers"
                      values={Object {}}
                    />
                  </ModalToggleButton>
                </li>
              </Connect(ChannelPermissionGate)>
              <li
                key="manage_members"
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <Connect(ChannelPermissionGate)
                    channelId="channel_id"
                    permissions={
                      Array [
                        "manage_public_channel_members",
                      ]
                    }
                    teamId="team_id"
                  >
                    <FormattedMessage
                      defaultMessage="Manage Members"
                      id="channel_header.manageMembers"
                      values={Object {}}
                    />
                  </Connect(ChannelPermissionGate)>
                  <Connect(ChannelPermissionGate)
                    channelId="channel_id"
                    invert={true}
                    permissions={
                      Array [
                        "manage_public_channel_members",
                      ]
                    }
                    teamId="team_id"
                  >
                    <FormattedMessage
                      defaultMessage="View Members"
                      id="channel_header.viewMembers"
                      values={Object {}}
                    />
                  </Connect(ChannelPermissionGate)>
                </a>
              </li>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "manage_public_channel_properties",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Edit Channel Header"
                      id="channel_header.setHeader"
                      values={Object {}}
                    />
                  </a>
                </li>
              </Connect(ChannelPermissionGate)>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "manage_public_channel_properties",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Edit Channel Purpose"
                      id="channel_header.setPurpose"
                      values={Object {}}
                    />
                  </a>
                </li>
              </Connect(ChannelPermissionGate)>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "manage_public_channel_properties",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Rename Channel"
                      id="channel_header.rename"
                      values={Object {}}
                    />
                  </a>
                </li>
              </Connect(ChannelPermissionGate)>
              <Connect(ChannelPermissionGate)
                channelId="channel_id"
                permissions={
                  Array [
                    "delete_public_channel",
                  ]
                }
                teamId="team_id"
              >
                <li
                  role="presentation"
                >
                  <ModalToggleButton
                    className=""
                    dialogProps={
                      Object {
                        "channel": Object {
                          "display_name": "display_name",
                          "id": "channel_id",
                          "team_id": "team_id",
                          "type": "O",
                        },
                      }
                    }
                    dialogType={[Function]}
                    role="menuitem"
                  >
                    <FormattedMessage
                      defaultMessage="Delete Channel"
                      id="channel_header.delete"
                      values={Object {}}
                    />
                  </ModalToggleButton>
                </li>
              </Connect(ChannelPermissionGate)>
              <li
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Leave Channel"
                    id="channel_header.leave"
                    values={Object {}}
                  />
                </a>
              </li>
              <li
                key="toggle_favorite"
                role="presentation"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="menuitem"
                >
                  <FormattedMessage
                    defaultMessage="Add to Favorites"
                    id="channelHeader.addToFavorites"
                    values={Object {}}
                  />
                </a>
              </li>
              <div
                className="close visible-xs-block"
                onClick={[Function]}
              >
                ×
              </div>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </nav>
  <Connect(InjectIntl(RenameChannelModal))
    channel={
      Object {
        "display_name": "display_name",
        "id": "channel_id",
        "team_id": "team_id",
        "type": "O",
      }
    }
    onHide={[Function]}
    show={false}
  />
  <Connect(ChannelNotificationsModal)
    channel={
      Object {
        "display_name": "display_name",
        "id": "channel_id",
        "team_id": "team_id",
        "type": "O",
      }
    }
    channelMember={
      Object {
        "id": "member_id",
      }
    }
    currentUser={
      Object {
        "id": "current_user_id",
      }
    }
    onHide={[Function]}
    show={false}
  />
  <Connect(QuickSwitchModal)
    initialMode="channel"
    onHide={[Function]}
    show={false}
  />
</div>
`;
